# esp32-ble4.2-library

./: README.md  sdkconfig  sdkconfig.old
OBD/inc/: OBD.h
OBD/src/: obd.c
OTA/inc/: OTA.h
OTA/src/: OTA.c
ble/inc/: ble.h
ble/src/: ble.c
credentials/inc/: credentials.h
credentials/src/: credentials.c
data_control/inc/: can.h  combiner.h  esp_rec.h  esp_vcu.h  esp_vcu_communication.h  map.h  que.h  task_que.h  timer_esp.h  vcu.h  vcu_esp.h
data_control/src/: can.c  combiner.c  esp_rec.c  esp_vcu.c  esp_vcu_communication.c  map.c  que.c  task_que.c  timer_esp.c  vcu.c  vcu_esp.c
main/: CMakeLists.txt  main.c  main.h
sim/inc/: sim7600.h
sim/src/: sim7600.c
